fixed spacing above the footer

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@ main {
 
 main > .container {
     height: 100%;
+    padding-bottom: 75px
 }
   
 
